refactor: add asset builder